オブジェクトの位置、大きさを変更してみよう

--- a/99_portfolio/src/diverse.html
+++ b/99_portfolio/src/diverse.html
@@ -141,6 +141,23 @@
                   alt=""
                 />
               </div>
+              <img
+                id="particles"
+                class="top__img test-sphere"
+                data-webgl="plane-sphere"
+                data-tex-1="/img/diverse_image_2.jpeg"
+                data-mouse="highlight"
+                data-mouse-scale="3"
+                alt=""
+              />
+              <style>
+                .test-sphere {
+                  position: absolute;
+                  right: 0;
+                  width: 600px;
+                  height: 300px;
+                }
+              </style>
             </div>
           </section>
           <section class="info" data-scroll-trigger="reversal">
