新しいオブジェクト（エフェクト）を作成してみよう

--- a/99_portfolio/src/test.html
+++ b/99_portfolio/src/test.html
@@ -128,28 +128,19 @@
         <main class="main">
           <section class="top">
             <div class="top__inner">
-              <h2 class="top__title" data-mouse="highlight" data-mouse-scale="3">DIVERSE</h2>
+              <h2 class="top__title" data-mouse="highlight" data-mouse-scale="3">TEST</h2>
               <p class="top__subtitle">技術を磨いて、新しい世界への扉を開こう。</p>
               <div class="top__img-wrap">
                 <img
                   id="particles"
                   class="top__img"
-                  data-webgl="particles"
+                  data-webgl="mouse-split"
                   data-tex-1="/img/diverse_image_2.jpeg"
                   data-mouse="highlight"
                   data-mouse-scale="3"
                   alt=""
                 />
               </div>
-              <img
-                id="particles"
-                class="top__img test-sphere"
-                data-webgl="plane-sphere"
-                data-tex-1="/img/diverse_image_2.jpeg"
-                data-mouse="highlight"
-                data-mouse-scale="3"
-                alt=""
-              />
               <style>
                 .test-sphere {
                   position: absolute;
