【実装編】WebGLのスケールを合わせよう

--- a/01_integration/src/010_positioning/start/index.html
+++ b/01_integration/src/010_positioning/start/index.html
@@ -7,6 +7,14 @@
     <title>WebGL Practical</title>
   </head>
   <body>
+    <div class="test"></div>
+    <style>
+      .test {
+        width: 100px;
+        height: 100px;
+        background-color: green;
+      }
+    </style>
     <canvas id="canvas"></canvas>
   </body>
 </html>
