【実装編】メッシュの表示位置をHTMLと合わせよう

--- a/01_integration/src/010_positioning/start/index.html
+++ b/01_integration/src/010_positioning/start/index.html
@@ -7,12 +7,18 @@
     <title>WebGL Practical</title>
   </head>
   <body>
-    <div class="test"></div>
+    <div id="div-1"></div>
     <style>
-      .test {
+      body {
+        height: 200vh;
+      }
+      #div-1 {
+        margin-left: 100px;
+        margin-top: 100px;
         width: 100px;
         height: 100px;
         background-color: green;
+        opacity: 0.3;
       }
     </style>
     <canvas id="canvas"></canvas>
