--- a/01_integration/src/030_scrollTrigger/start/index.html
+++ b/01_integration/src/030_scrollTrigger/start/index.html
@@ -13,12 +13,12 @@
     <style>
       [data-webgl] {
         background: green;
-        opacity: .3;
+        opacity: 0.3;
       }
 
       div {
         margin-left: 100px;
-        margin-top: 100px;
+        margin-top: 1500px;
         width: 100px;
         height: 100px;
       }
@@ -36,7 +36,7 @@
         width: 300px;
         top: 10px;
       }
-      
+
       body {
         height: 200vh;
       }
