--- a/01_integration/src/040_smooth_scrollTrigger/start/index.html
+++ b/01_integration/src/040_smooth_scrollTrigger/start/index.html
@@ -7,40 +7,40 @@
     <title>WebGL Practical</title>
   </head>
   <body>
-    <div data-webgl></div>
-    <!-- <section data-webgl></section>
-    <img data-webgl src="/img/slider/slider_1.jpg"/> -->
-    <style>
-      [data-webgl] {
-        background: green;
-        opacity: .3;
-      }
+    <div id="page-container">
+      <div class="div1" data-webgl></div>
+      <section data-webgl></section>
+      <img data-webgl src="/img/slider/slider_1.jpg" />
+      <style>
+        [data-webgl] {
+          background: green;
+          opacity: 0.3;
+        }
 
-      div {
-        margin-left: 100px;
-        margin-top: 1500px;
-        width: 100px;
-        height: 100px;
-      }
+        .div1 {
+          margin-left: 100px;
+          margin-top: 1500px;
+          width: 100px;
+          height: 100px;
+        }
 
-      section {
-        margin-left: 300px;
-        margin-top: 50px;
-        width: 200px;
-        height: 100px;
-      }
+        section {
+          margin-left: 300px;
+          margin-top: 50px;
+          width: 200px;
+          height: 100px;
+        }
 
-      img {
-        position: absolute;
-        right: 100px;
-        width: 300px;
-        top: 10px;
-      }
-      
-      body {
-        height: 200vh;
-      }
-    </style>
+        img {
+          margin-top: 500px;
+          width: 300px;
+        }
+
+        /* body {
+          height: 200vh;
+        } */
+      </style>
+    </div>
     <canvas id="canvas"></canvas>
   </body>
 </html>
