画面リサイズ時の制御を加えよう

--- a/01_integration/src/050_resize/start/index.html
+++ b/01_integration/src/050_resize/start/index.html
@@ -10,34 +10,34 @@
     <div id="page-container">
       <div class="div1" data-webgl></div>
       <section data-webgl></section>
-      <img data-webgl src="/img/slider/slider_1.jpg"/>
+      <img data-webgl src="/img/slider/slider_1.jpg" />
       <style>
         [data-webgl] {
           background: green;
-          opacity: .3;
+          opacity: 0.3;
         }
-  
+
         .div1 {
           margin-left: 100px;
-          margin-top: 1500px;
+          margin-top: 50px;
           width: 100px;
           height: 100px;
         }
-  
+
         section {
           margin-left: 300px;
           margin-top: 500px;
           width: 200px;
           height: 100px;
         }
-  
+
         img {
           margin-top: 500px;
           width: 300px;
         }
       </style>
     </div>
-    
+
     <canvas id="canvas"></canvas>
   </body>
 </html>
