--- a/02_texture/src/010_load_texture/start/index.html
+++ b/02_texture/src/010_load_texture/start/index.html
@@ -9,11 +9,16 @@
   <body>
     <div id="global-container">
       <div id="page-container">
-        <img data-webgl data-tex-1="/img/slider/slider_1.jpg" src="/img/slider/slider_1.jpg"/>
-        
+        <img
+          data-webgl
+          data-tex-1="/img/slider/slider_1.jpg"
+          data-tex-2="/img/slider/slider_2.jpg"
+          src="/img/slider/slider_1.jpg"
+        />
+
         <style>
           [data-webgl] {
-            opacity: .3;
+            opacity: 0.3;
           }
           img {
             margin-top: 100px;
@@ -21,7 +26,7 @@
           }
         </style>
       </div>
-      
+
       <canvas id="canvas"></canvas>
     </div>
   </body>
