テクスチャをキャッシュとして保持しよう

--- a/02_texture/src/010_load_texture/start/index.html
+++ b/02_texture/src/010_load_texture/start/index.html
@@ -15,6 +15,18 @@
           data-tex-2="/img/slider/slider_2.jpg"
           src="/img/slider/slider_1.jpg"
         />
+        <img
+          data-webgl
+          data-tex-1="/img/slider/slider_1.jpg"
+          data-tex-2="/img/slider/slider_2.jpg"
+          src="/img/slider/slider_1.jpg"
+        />
+        <img
+          data-webgl
+          data-tex-1="/img/slider/slider_1.jpg"
+          data-tex-2="/img/slider/slider_2.jpg"
+          src="/img/slider/slider_1.jpg"
+        />
 
         <style>
           [data-webgl] {
