テクスチャのサイズをHTML要素から計算しよう

--- a/02_texture/src/020_texture_sizing/start/index.html
+++ b/02_texture/src/020_texture_sizing/start/index.html
@@ -9,12 +9,24 @@
   <body>
     <div id="global-container">
       <div id="page-container">
-        <img data-webgl data-tex-1="/img/slider/slider_1.jpg" src="/img/slider/slider_1.jpg" data-tex-2="/img/slider/slider_3.jpg" src="/img/slider/slider_2.jpg"/>
-        <img data-webgl data-tex-1="/img/slider/slider_1.jpg" src="/img/slider/slider_1.jpg" data-tex-2="/img/slider/slider_2.jpg" src="/img/slider/slider_2.jpg"/>
-        <img data-webgl data-tex-1="/img/slider/slider_1.jpg" src="/img/slider/slider_1.jpg" data-tex-2="/img/slider/slider_2.jpg" src="/img/slider/slider_2.jpg"/>
+        <img
+          data-webgl
+          data-tex-1="/img/slider/slider_1.jpg"
+          data-tex-2="/img/slider/slider_3.jpg"
+        />
+        <img
+          data-webgl
+          data-tex-1="/img/slider/slider_1.jpg"
+          data-tex-2="/img/slider/slider_2.jpg"
+        />
+        <img
+          data-webgl
+          data-tex-1="/img/slider/slider_1.jpg"
+          data-tex-2="/img/slider/slider_2.jpg"
+        />
         <style>
           [data-webgl] {
-            opacity: .3;
+            opacity: 0.3;
           }
           img {
             margin-top: 100px;
@@ -22,7 +34,7 @@
           }
         </style>
       </div>
-      
+
       <canvas id="canvas"></canvas>
     </div>
   </body>
