--- a/02_texture/src/020_texture_sizing/start/index.html
+++ b/02_texture/src/020_texture_sizing/start/index.html
@@ -9,6 +9,12 @@
   <body>
     <div id="global-container">
       <div id="page-container">
+        <div
+          id="div1"
+          data-webgl
+          data-tex-1="/img/slider/slider_1.jpg"
+          data-tex-2="/img/slider/slider_3.jpg"
+        ></div>
         <img
           data-webgl
           data-tex-1="/img/slider/slider_1.jpg"
@@ -27,6 +33,10 @@
         <style>
           [data-webgl] {
             opacity: 0.3;
+          }
+          #div1 {
+            width: 800px;
+            height: 200px;
           }
           img {
             margin-top: 100px;
