--- a/02_texture/src/040_video_texture/start/index.html
+++ b/02_texture/src/040_video_texture/start/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./scripts/index.js" type="module"></script>
     <title>WebGL Practical</title>
-    <link rel="stylesheet" href="./styles/loader.scss">
+    <link rel="stylesheet" href="./styles/loader.scss" />
   </head>
   <body>
     <div id="loader" class="loader">
@@ -22,14 +22,31 @@
     </div>
     <div id="global-container">
       <div id="page-container">
-        <div id="div1" data-webgl data-tex-1="/img/slider/slider_1.jpg" data-tex-2="/img/slider/slider_3.jpg">
-        </div>
-        <img data-webgl data-tex-1="/img/slider/slider_1.jpg" data-tex-2="/img/slider/slider_3.jpg"/>
-        <img data-webgl data-tex-1="/img/slider/slider_1.jpg" data-tex-2="/img/slider/slider_2.jpg"/>
-        <img data-webgl data-tex-1="/img/slider/slider_1.jpg" data-tex-2="/img/slider/slider_2.jpg"/>
+        <div
+          id="div1"
+          data-webgl
+          data-tex-1="/movie/beach.mp4"
+          data-tex-2="/img/slider/slider_3.jpg"
+        ></div>
+        <video data-webgl data-tex-1="/movie/beach.mp4"></video>
+        <img
+          data-webgl
+          data-tex-1="/img/slider/slider_1.jpg"
+          data-tex-2="/img/slider/slider_3.jpg"
+        />
+        <img
+          data-webgl
+          data-tex-1="/img/slider/slider_1.jpg"
+          data-tex-2="/img/slider/slider_2.jpg"
+        />
+        <img
+          data-webgl
+          data-tex-1="/img/slider/slider_1.jpg"
+          data-tex-2="/img/slider/slider_2.jpg"
+        />
         <style>
           [data-webgl] {
-            opacity: .3;
+            opacity: 0.3;
           }
           #div1 {
             width: 800px;
@@ -41,7 +58,7 @@
           }
         </style>
       </div>
-      
+
       <canvas id="canvas"></canvas>
     </div>
   </body>
