動画処理をマルチブラウザに対応させよう

--- a/02_texture/src/040_video_texture/start/index.html
+++ b/02_texture/src/040_video_texture/start/index.html
@@ -28,7 +28,12 @@
           data-tex-1="/movie/beach.mp4"
           data-tex-2="/img/slider/slider_3.jpg"
         ></div>
-        <video data-webgl data-tex-1="/movie/beach.mp4"></video>
+        <div
+          id="div1"
+          data-webgl
+          data-tex-1="/movie/fresnel_back.webm"
+          data-tex-2="/img/slider/slider_3.jpg"
+        ></div>
         <img
           data-webgl
           data-tex-1="/img/slider/slider_1.jpg"
