--- a/06_portfolio1/src/start/index.html
+++ b/06_portfolio1/src/start/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./scripts/index.js" type="module"></script>
     <title>WebGL Practical</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Noto+Serif+JP:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./styles/loader.scss" />
   </head>
   <body>
