モダンなサイトで使われるCSS変数について理解しよう

--- a/06_portfolio1/src/css-variable.html
+++ b/06_portfolio1/src/css-variable.html
@@ -14,7 +14,7 @@
       <li>JSでの値の変更がしやすくなる</li>
     </ul>
 
-    <!-- <style>
+    <style>
       :root {
         --c-orange: orange;
         --medium-size: 20px;
@@ -27,14 +27,14 @@
       .orange-bg {
         background-color: var(--c-orange);
       }
-    </style> -->
+    </style>
 
-    <!-- <script>
+    <script>
       setTimeout(() => {
         const root = document.querySelector(':root');
         root.style.setProperty('--c-orange', 'red');
       }, 2000);
-    </script> -->
+    </script>
 
   </body>
 </html>
